84059 - form wizard : files required could not be found
I've essentially unwound most the Java  changes I made te wizards module
in the last few months. I will revisit my changes at a later date and
make them more carefully :-)

Change-Id: I9221a825dc8de6edc96d6db07072aefcd1a37107