@@ -27,6 +27,7 @@ import com.sun.star.beans.XPropertySet;
 import com.sun.star.lang.EventObject;
 import com.sun.star.uno.Exception;
 import com.sun.star.uno.UnoRuntime;
+import com.sun.star.wizards.common.Desktop;
 import com.sun.star.wizards.common.Helper;
 import com.sun.star.wizards.common.PropertyNames;
 import com.sun.star.wizards.db.TableDescriptor;
@@ -36,29 +37,29 @@ import com.sun.star.wizards.ui.UnoDialog;
 public class FieldFormatter implements XItemListener
 {
 
-    private TableWizard CurUnoDialog;
-    private TableDescriptor curTableDescriptor;
-    private Object oColumnDescriptorModel;
-    private XTextComponent txtfieldname;
-    private XListBox xlstFieldNames;
-    private XButton btnplus;
-    private XButton btnminus;
-    private XButton btnShiftUp;
-    private XButton btnShiftDown;
-    private short curtabindex;
+    TableWizard CurUnoDialog;
+    TableDescriptor curTableDescriptor;
+    Object oColumnDescriptorModel;
+    XTextComponent txtfieldname;
+    XListBox xlstFieldNames;
+    XButton btnplus;
+    XButton btnminus;
+    XButton btnShiftUp;
+    XButton btnShiftDown;
+    short curtabindex;
+    String TOGGLEBUTTONS = "toggleButtons";
+    String ADDFIELDNAME = "addFieldName";
+    String REMOVEFIELDNAME = "removeFieldName";
+    String MODIFYFIELDNAME = "modifyFieldName";
+    String[] fieldnames;
+    String suntitled;
+    Integer IFieldFormatStep;
 
-
-
-    private String MODIFYFIELDNAME = "modifyFieldName";
-
-    private String suntitled;
-    private Integer IFieldFormatStep;
-
-    public FieldFormatter(TableWizard _CurUnoDialog)
+    public FieldFormatter(TableWizard _CurUnoDialog, TableDescriptor _curTableDescriptor)
     {
         this.CurUnoDialog = _CurUnoDialog;
         curtabindex = (short) (TableWizard.SOFIELDSFORMATPAGE * 100);
-        IFieldFormatStep = Integer.valueOf(TableWizard.SOFIELDSFORMATPAGE);
+        IFieldFormatStep = new Integer(TableWizard.SOFIELDSFORMATPAGE);
         String sFieldName = CurUnoDialog.m_oResource.getResText(UIConsts.RID_TABLE + 23);
         String sFieldNames = CurUnoDialog.m_oResource.getResText(UIConsts.RID_TABLE + 25);
         String sfieldinfo = CurUnoDialog.m_oResource.getResText(UIConsts.RID_TABLE + 20);
@@ -74,7 +75,7 @@ public class FieldFormatter implements XItemListener
                 },
                 new Object[]
                 {
-                    UIConsts.INTEGERS[8], sFieldNames, 91, 27, IFieldFormatStep, Short.valueOf(curtabindex++), 90
+                    UIConsts.INTEGERS[8], sFieldNames, 91, 27, IFieldFormatStep, new Short(curtabindex++), 90
                 });
 
         try
@@ -86,7 +87,7 @@ public class FieldFormatter implements XItemListener
                     },
                     new Object[]
                     {
-                        133, "HID:WIZARDS_HID_DLGTABLE_LB_SELFIELDNAMES", 92, 37, IFieldFormatStep, Short.valueOf(curtabindex++), 62
+                        133, "HID:WIZARDS_HID_DLGTABLE_LB_SELFIELDNAMES", 92, 37, IFieldFormatStep, new Short(curtabindex++), 62
                     });
         }
         catch (Exception e)
@@ -104,7 +105,7 @@ public class FieldFormatter implements XItemListener
                 },
                 new Object[]
                 {
-                    Boolean.FALSE, oFontDesc, 14, "HID:WIZARDS_HID_DLGTABLE_CMDMOVEFIELDUP", String.valueOf((char) 8743), 158, 139, IFieldFormatStep, Short.valueOf(curtabindex++), 14
+                    Boolean.FALSE, oFontDesc, 14, "HID:WIZARDS_HID_DLGTABLE_CMDMOVEFIELDUP", String.valueOf((char) 8743), 158, 139, IFieldFormatStep, new Short(curtabindex++), 14
                 });
 
         btnShiftDown = CurUnoDialog.insertButton("btnShiftDown", "shiftFieldNameDown", this,
@@ -114,7 +115,7 @@ public class FieldFormatter implements XItemListener
                 },
                 new Object[]
                 {
-                    Boolean.FALSE, oFontDesc, 14, "HID:WIZARDS_HID_DLGTABLE_CMDMOVEFIELDDOWN", String.valueOf((char) 8744), 158, 156, IFieldFormatStep, Short.valueOf(curtabindex++), 14
+                    Boolean.FALSE, oFontDesc, 14, "HID:WIZARDS_HID_DLGTABLE_CMDMOVEFIELDDOWN", String.valueOf((char) 8744), 158, 156, IFieldFormatStep, new Short(curtabindex++), 14
                 });
         oFontDesc = new FontDescriptor();
         oFontDesc.Weight = com.sun.star.awt.FontWeight.BOLD;
@@ -126,7 +127,7 @@ public class FieldFormatter implements XItemListener
                 },
                 new Object[]
                 {
-                    oFontDesc, 14, "HID:WIZARDS_HID_DLGTABLE_CMDMINUS", "-", 118, 175, IFieldFormatStep, Short.valueOf(curtabindex++), 14
+                    oFontDesc, 14, "HID:WIZARDS_HID_DLGTABLE_CMDMINUS", "-", 118, 175, IFieldFormatStep, new Short(curtabindex++), 14
                 });
 
         btnplus = CurUnoDialog.insertButton("btnplus", "addFieldName", this,
@@ -136,7 +137,7 @@ public class FieldFormatter implements XItemListener
                 },
                 new Object[]
                 {
-                    oFontDesc, 14, "HID:WIZARDS_HID_DLGTABLE_CMDPLUS", "+", 137, 175, IFieldFormatStep, Short.valueOf(curtabindex++), 14
+                    oFontDesc, 14, "HID:WIZARDS_HID_DLGTABLE_CMDPLUS", "+", 137, 175, IFieldFormatStep, new Short(curtabindex++), 14
                 });
 
         CurUnoDialog.insertControlModel("com.sun.star.awt.UnoControlFixedLineModel", "ColDescriptorHeader",
@@ -146,7 +147,7 @@ public class FieldFormatter implements XItemListener
                 },
                 new Object[]
                 {
-                    8, sfieldinfo, 0, 158, 27, IFieldFormatStep, Short.valueOf(curtabindex++), 165
+                    8, sfieldinfo, 0, 158, 27, IFieldFormatStep, new Short(curtabindex++), 165
                 });
 
 
@@ -157,7 +158,7 @@ public class FieldFormatter implements XItemListener
                 },
                 new Object[]
                 {
-                    UIConsts.INTEGERS[8], sFieldName, 158, 39, IFieldFormatStep, Short.valueOf(curtabindex++), 94
+                    UIConsts.INTEGERS[8], sFieldName, 158, 39, IFieldFormatStep, new Short(curtabindex++), 94
                 });
 
         txtfieldname = CurUnoDialog.insertTextField("txtfieldname", MODIFYFIELDNAME, this,
@@ -167,7 +168,7 @@ public class FieldFormatter implements XItemListener
                 },
                 new Object[]
                 {
-                    UIConsts.INTEGER_12, "HID:WIZARDS_HID_DLGTABLE_COLNAME", 274, 37, IFieldFormatStep, Short.valueOf(curtabindex++), PropertyNames.EMPTY_STRING, 50
+                    UIConsts.INTEGER_12, "HID:WIZARDS_HID_DLGTABLE_COLNAME", 274, 37, IFieldFormatStep, new Short(curtabindex++), PropertyNames.EMPTY_STRING, 50
                 });
         txtfieldname.addTextListener(CurUnoDialog);
         CurUnoDialog.getPeerConfiguration().setAccessibleName(btnplus, sbtnplushelptext);
@@ -185,7 +186,7 @@ public class FieldFormatter implements XItemListener
                     }, // PropertyNames.PROPERTY_HELPURL
                     new Object[]
                     {
-                        85, 158, 49, IFieldFormatStep, Short.valueOf(curtabindex++), 166, 50
+                        85, 158, 49, IFieldFormatStep, new Short(curtabindex++), 166, 50
                     });  //, "HID:WIZARDS_HID_DLGTABLE_COLMODIFIER"
             curTableDescriptor = _curTableDescriptor;
             Helper.setUnoPropertyValue(oColumnDescriptorModel, PropertyNames.ACTIVE_CONNECTION, _curTableDescriptor.DBConnection);
@@ -210,7 +211,7 @@ public class FieldFormatter implements XItemListener
         CurUnoDialog.setFocus("lstfieldnames");
     }
 
-    private void toggleButtons()
+    public void toggleButtons()
     {
         boolean benableShiftUpButton = false;
         boolean benableShiftDownButton = false;
@@ -229,15 +230,142 @@ public class FieldFormatter implements XItemListener
         CurUnoDialog.setcompleted(TableWizard.SOFIELDSFORMATPAGE, blistispopulated);
     }
 
+    public void addFieldName()
+    {
+        String snewfieldname = Desktop.getUniqueName(xlstFieldNames.getItems(), suntitled, PropertyNames.EMPTY_STRING);
+        short icount = xlstFieldNames.getItemCount();
+        if (CurUnoDialog.verifyfieldcount(icount))
+        {
+            xlstFieldNames.addItem(snewfieldname, icount);
+            Helper.setUnoPropertyValue(UnoDialog.getModel(xlstFieldNames), PropertyNames.SELECTED_ITEMS, new short[]
+                    {
+                        icount
+                    });
+            toggleButtons();
+            FieldDescription curfielddescription = new FieldDescription(snewfieldname);
+            CurUnoDialog.fielditems.put(snewfieldname, curfielddescription);
+            curTableDescriptor.addColumn(curfielddescription.getPropertyValues());
+            updateColumnDescriptor(snewfieldname, curTableDescriptor.getByName(snewfieldname));
+            CurUnoDialog.setControlVisible("oColumnDescriptor", true);
+            CurUnoDialog.repaintDialogStep();
+        }
+    }
 
+    public void removeFieldName()
+    {
+        String[] fieldnames = (String[]) Helper.getUnoPropertyValue(UnoDialog.getModel(xlstFieldNames), PropertyNames.STRING_ITEM_LIST);
+        short ipos = UnoDialog.getSelectedItemPos(xlstFieldNames);
+        String fieldname = fieldnames[ipos];
+        xlstFieldNames.removeItems(ipos, (short) 1);
+        CurUnoDialog.fielditems.remove(fieldname);
+        int ilistcount = /* xlstFieldNames.getItemCount();*/ UnoDialog.getListBoxItemCount(xlstFieldNames);
+        if ((ipos) < ilistcount)
+        {
+            Helper.setUnoPropertyValue(UnoDialog.getModel(xlstFieldNames), PropertyNames.SELECTED_ITEMS, new short[]
+                    {
+                        ipos
+                    });
+        }
+        else
+        {
+            if (ilistcount > -1)
+            {
+                ipos = (short) ((short) ilistcount - (short) 1);
+                Helper.setUnoPropertyValue(UnoDialog.getModel(xlstFieldNames), PropertyNames.SELECTED_ITEMS, new short[]
+                        {
+                            ipos
+                        });
+            }
+        }
+        curTableDescriptor.dropColumnbyName(fieldname);
+        fieldnames = (String[]) Helper.getUnoPropertyValue(UnoDialog.getModel(xlstFieldNames), PropertyNames.STRING_ITEM_LIST);
+        boolean benable = ((ipos > -1) && (ipos < fieldnames.length));
+        if (benable)
+        {
+            String snewfieldname = fieldnames[ipos];
+            updateColumnDescriptor(snewfieldname, curTableDescriptor.getByName(snewfieldname));
+            toggleButtons();
+        }
+        else
+        {
+            Helper.setUnoPropertyValue(UnoDialog.getModel(txtfieldname), "Text", PropertyNames.EMPTY_STRING);
+            Helper.setUnoPropertyValue(UnoDialog.getModel(btnminus), PropertyNames.PROPERTY_ENABLED, Boolean.valueOf(benable));
+            CurUnoDialog.setcompleted(TableWizard.SOFIELDSFORMATPAGE, benable);
+        }
+        Helper.setUnoPropertyValue(UnoDialog.getModel(btnminus), PropertyNames.PROPERTY_ENABLED, Boolean.valueOf(benable));
+        CurUnoDialog.setControlVisible("oColumnDescriptor", benable);
+        CurUnoDialog.repaintDialogStep();
+    }
 
+    public void modifyFieldName()
+    {
+        String newfieldname = txtfieldname.getText();
+        String oldfieldname = xlstFieldNames.getSelectedItem();
+        if (!newfieldname.equals(oldfieldname))
+        {
+            if (curTableDescriptor.modifyColumnName(oldfieldname, newfieldname))
+            {
+                Object oColumn = Helper.getUnoPropertyValue(oColumnDescriptorModel, "Column");
+                Helper.setUnoPropertyValue(oColumn, PropertyNames.PROPERTY_NAME, newfieldname);
+                FieldDescription curfielddescription = CurUnoDialog.fielditems.get(oldfieldname);
+                CurUnoDialog.fielditems.remove(oldfieldname);
+                curfielddescription.setName(newfieldname);
+                CurUnoDialog.fielditems.put(newfieldname, curfielddescription);
+                String[] fieldnames = xlstFieldNames.getItems();
+                short ipos = xlstFieldNames.getSelectedItemPos();
+                fieldnames[ipos] = newfieldname;
+                Helper.setUnoPropertyValue(UnoDialog.getModel(xlstFieldNames), PropertyNames.STRING_ITEM_LIST, fieldnames);
+                Helper.setUnoPropertyValue(UnoDialog.getModel(xlstFieldNames), PropertyNames.SELECTED_ITEMS, new short[]
+                        {
+                            ipos
+                        });
+            }
+        }
+    }
 
+    public void shiftFieldNameUp()
+    {
+        short ipos = xlstFieldNames.getSelectedItemPos();
+        String[] snewlist = shiftArrayItem(xlstFieldNames.getItems(), ipos, -1);
+        Helper.setUnoPropertyValue(UnoDialog.getModel(xlstFieldNames), PropertyNames.STRING_ITEM_LIST, snewlist);
+        if ((ipos - 1) > -1)
+        {
+            Helper.setUnoPropertyValue(UnoDialog.getModel(xlstFieldNames), PropertyNames.SELECTED_ITEMS, new short[]
+                    {
+                        (short) (ipos - 1)
+                    });
+            curTableDescriptor.moveColumn(ipos, ipos - 1);
+        }
+        toggleButtons();
+    }
 
+    public void shiftFieldNameDown()
+    {
+        short ipos = xlstFieldNames.getSelectedItemPos();
+        String[] snewlist = shiftArrayItem(xlstFieldNames.getItems(), ipos, 1);
+        Helper.setUnoPropertyValue(UnoDialog.getModel(xlstFieldNames), PropertyNames.STRING_ITEM_LIST, snewlist);
+        if ((ipos + 1) < xlstFieldNames.getItemCount())
+        {
+            Helper.setUnoPropertyValue(UnoDialog.getModel(xlstFieldNames), PropertyNames.SELECTED_ITEMS, new short[]
+                    {
+                        (short) (ipos + 1)
+                    });
+            curTableDescriptor.moveColumn(ipos, ipos + 1);
+        }
+        toggleButtons();
+    }
 
-
-
-
-
+    public String[] shiftArrayItem(String[] _slist, int _oldindex, int _shiftcount)
+    {
+        int newindex = _oldindex + _shiftcount;
+        if ((newindex >= 0) && (newindex < _slist.length))
+        {
+            String buffer = _slist[newindex];
+            _slist[newindex] = _slist[_oldindex];
+            _slist[_oldindex] = buffer;
+        }
+        return _slist;
+    }
 
     public boolean updateColumnofColumnDescriptor()
     {
@@ -260,6 +388,11 @@ public class FieldFormatter implements XItemListener
             Helper.setUnoPropertyValue(oColumnDescriptorModel, "Column", xNewPropertySet);
         }
         txtfieldname.setText(_ColumnName);
+    }
+
+    public XPropertySet clonePropertySet(XPropertySet _xPropertySet)
+    {
+        return null;
     }
 
     public void itemStateChanged(ItemEvent arg0)
