@@ -23,6 +23,7 @@ import com.sun.star.container.XNamed;
 import com.sun.star.frame.XFrame;
 import com.sun.star.lang.Locale;
 import com.sun.star.lang.XMultiServiceFactory;
+import com.sun.star.style.BreakType;
 import com.sun.star.table.XCellRange;
 import com.sun.star.text.XSimpleText;
 import com.sun.star.text.XTextContent;
@@ -32,6 +33,7 @@ import com.sun.star.text.XTextTablesSupplier;
 import com.sun.star.uno.AnyConverter;
 import com.sun.star.uno.Exception;
 import com.sun.star.uno.UnoRuntime;
+import com.sun.star.uno.XInterface;
 import com.sun.star.util.XNumberFormatsSupplier;
 import com.sun.star.view.XSelectionSupplier;
 import com.sun.star.wizards.common.Desktop;
@@ -42,9 +44,9 @@ public class TextTableHandler
 {
 
     public XTextTablesSupplier xTextTablesSupplier;
-    private XMultiServiceFactory xMSFDoc;
-    private XTextDocument xTextDocument;
-
+    public XMultiServiceFactory xMSFDoc;
+    public XTextDocument xTextDocument;
+    public XSimpleText xSimpleText;
     private NumberFormatter oNumberFormatter;
     private Locale aCharLocale;
 
@@ -56,7 +58,7 @@ public class TextTableHandler
             this.xMSFDoc = xMSF;
             this.xTextDocument = xTextDocument;
             xTextTablesSupplier = UnoRuntime.queryInterface(XTextTablesSupplier.class, xTextDocument);
-            UnoRuntime.queryInterface(XSimpleText.class, xTextDocument.getText());
+            xSimpleText = UnoRuntime.queryInterface(XSimpleText.class, xTextDocument.getText());
             XNumberFormatsSupplier xNumberFormatsSupplier = UnoRuntime.queryInterface(XNumberFormatsSupplier.class, xTextDocument);
             aCharLocale = (Locale) Helper.getUnoStructValue(xTextDocument, "CharLocale");
             oNumberFormatter = new NumberFormatter(xNumberFormatsSupplier, aCharLocale);
@@ -107,7 +109,24 @@ public class TextTableHandler
         }
     }
 
-
+    public void insertTextTable(com.sun.star.text.XTextCursor xTextCursor)
+    {
+        try
+        {
+            com.sun.star.uno.XInterface xTextTable = (XInterface) xMSFDoc.createInstance("com.sun.star.text.TextTable");
+            XTextContent xTextContentTable = UnoRuntime.queryInterface(XTextContent.class, xTextTable);
+            if (xTextCursor == null)
+            {
+                xTextCursor = xTextDocument.getText().createTextCursor();
+                xTextCursor.gotoEnd(false);
+            }
+            xTextCursor.getText().insertTextContent(xTextCursor, xTextContentTable, false);
+        }
+        catch (Exception exception)
+        {
+            exception.printStackTrace(System.err);
+        }
+    }
 
     public void removeAllTextTables()
     {
@@ -140,7 +159,7 @@ public class TextTableHandler
         }
     }
 
-    private void removeTextTable(Object oTextTable)
+    public void removeTextTable(Object oTextTable)
     {
         try
         {
@@ -187,7 +206,12 @@ public class TextTableHandler
         }
     }
 
-
+    public static BreakType resetBreakTypeofTextTable(Object oTextTable)
+    {
+        BreakType BreakValue = (BreakType) com.sun.star.wizards.common.Helper.getUnoStructValue(oTextTable, "BreakType");
+        Helper.setUnoPropertyValue(oTextTable, "BreakType", BreakType.NONE);
+        return BreakType.NONE;
+    }
 
     public void adjustOptimalTableWidths(XMultiServiceFactory _xMSF, XTextTable xTextTable)
     {
@@ -202,7 +226,7 @@ public class TextTableHandler
             xSelection.select(xLocCellRange);
             Desktop.dispatchURL(_xMSF, ".Uno:DistributeColumns", xFrame);
             Desktop.dispatchURL(_xMSF, ".Uno:SetOptimalColumnWidth", xFrame);
-            Helper.setUnoPropertyValue(xTextTable, "HoriOrient", Short.valueOf(iHoriOrient));
+            Helper.setUnoPropertyValue(xTextTable, "HoriOrient", new Short(iHoriOrient));
         }
         catch (Exception exception)
         {
