@@ -26,28 +26,28 @@ import java.util.ArrayList;
 public class SortingComponent
 {
 
-
-    private WizardDialog CurUnoDialog;
-    private int MaxSortIndex = -1;
-
-    private static String sNoSorting;
-    private static String sSortCriteriaisduplicate;
-    private static String[] sSortHeader = new String[4];
-    private static String[] sSortAscend = new String[4];
-    private static String[] sSortDescend = new String[4];
-
-    private int MAXSORTCRITERIAINDEX = 3;
-    private final int SOFIRSTSORTLST = 0;
-    private final int SOSECSORTLST = 1;
-    private final int SOTHIRDSORTLST = 2;
-    private final int SOFOURTHSORTLST = 3;
-    private final int[] SOSORTLST = new int[]
+    com.sun.star.lang.XMultiServiceFactory xMSF;
+    WizardDialog CurUnoDialog;
+    int MaxSortIndex = -1;
+    public String[][] FieldNames;
+    static String sNoSorting;
+    static String sSortCriteriaisduplicate;
+    static String[] sSortHeader = new String[4];
+    static String[] sSortAscend = new String[4];
+    static String[] sSortDescend = new String[4];
+    static short[] bOldSortValues = new short[4];
+    public int MAXSORTCRITERIAINDEX = 3;
+    final int SOFIRSTSORTLST = 0;
+    final int SOSECSORTLST = 1;
+    final int SOTHIRDSORTLST = 2;
+    final int SOFOURTHSORTLST = 3;
+    final int[] SOSORTLST = new int[]
     {
         SOFIRSTSORTLST, SOSECSORTLST, SOTHIRDSORTLST, SOFOURTHSORTLST
     };
-    private XListBox[] xSortListBox = new XListBox[4];
+    XListBox[] xSortListBox = new XListBox[4];
 
-    private class ItemListenerImpl implements com.sun.star.awt.XItemListener
+    class ItemListenerImpl implements com.sun.star.awt.XItemListener
     {
 
         public void itemStateChanged(ItemEvent EventObject)
@@ -69,15 +69,16 @@ public class SortingComponent
         {
             this.CurUnoDialog = CurUnoDialog;
             short curtabindex = UnoDialog.setInitialTabindex(iStep);
-            Integer IStep = Integer.valueOf(iStep);
-            Integer ICompPosX = Integer.valueOf(iCompPosX);
-            Integer ICompWidth = Integer.valueOf(iCompWidth);
+            xMSF = CurUnoDialog.xMSF;
+            Integer IStep = new Integer(iStep);
+            Integer ICompPosX = new Integer(iCompPosX);
+            Integer ICompWidth = new Integer(iCompWidth);
 
-            Integer IListBoxPosX = Integer.valueOf(iCompPosX + 6);
+            Integer IListBoxPosX = new Integer(iCompPosX + 6);
             int iOptButtonWidth = 65;
-            Integer IOptButtonWidth = Integer.valueOf(iOptButtonWidth);
-            Integer IListBoxWidth = Integer.valueOf(iCompWidth - iOptButtonWidth - 12);
-            Integer IOptButtonPosX = Integer.valueOf(IListBoxPosX.intValue() + IListBoxWidth.intValue() + 6);
+            Integer IOptButtonWidth = new Integer(iOptButtonWidth);
+            Integer IListBoxWidth = new Integer(iCompWidth - iOptButtonWidth - 12);
+            Integer IOptButtonPosX = new Integer(IListBoxPosX.intValue() + IListBoxWidth.intValue() + 6);
             getResources();
             boolean bDoEnable;
             String HIDString;
@@ -90,7 +91,7 @@ public class SortingComponent
                             PropertyNames.PROPERTY_ENABLED, PropertyNames.PROPERTY_HEIGHT, PropertyNames.PROPERTY_LABEL, PropertyNames.ORIENTATION, PropertyNames.PROPERTY_POSITION_X, PropertyNames.PROPERTY_POSITION_Y, PropertyNames.PROPERTY_STEP, PropertyNames.PROPERTY_TABINDEX, PropertyNames.PROPERTY_WIDTH
                         }, new Object[]
                         {
-                                Boolean.valueOf(bDoEnable), 8, sSortHeader[i], 0, ICompPosX, Integer.valueOf(iCurPosY), IStep, Short.valueOf(curtabindex++), ICompWidth
+                                Boolean.valueOf(bDoEnable), 8, sSortHeader[i], 0, ICompPosX, new Integer(iCurPosY), IStep, new Short(curtabindex++), ICompWidth
                         });
 
                 HIDString = HelpIds.getHelpIdString(FirstHelpIndex);
@@ -99,8 +100,8 @@ public class SortingComponent
                             "Dropdown", PropertyNames.PROPERTY_ENABLED, PropertyNames.PROPERTY_HEIGHT, PropertyNames.PROPERTY_HELPURL, "LineCount", PropertyNames.PROPERTY_NAME, PropertyNames.PROPERTY_POSITION_X, PropertyNames.PROPERTY_POSITION_Y, PropertyNames.PROPERTY_STEP, PropertyNames.PROPERTY_TABINDEX, PropertyNames.PROPERTY_WIDTH
                         }, new Object[]
                         {
-                            true, bDoEnable, 12, HIDString, Short.valueOf(UnoDialog.getListBoxLineCount()), "lstSort" + Integer.valueOf(i + 1), IListBoxPosX, Integer.valueOf(iCurPosY + 14), IStep, Short.valueOf(curtabindex++), IListBoxWidth
-                        }); //Short.valueOf((short) (17+i*4))
+                            true, bDoEnable, 12, HIDString, new Short(UnoDialog.getListBoxLineCount()), "lstSort" + new Integer(i + 1), IListBoxPosX, new Integer(iCurPosY + 14), IStep, new Short(curtabindex++), IListBoxWidth
+                        }); //new Short((short) (17+i*4))
 
                 HIDString = HelpIds.getHelpIdString(FirstHelpIndex + 1);
                 XRadioButton xRadioButtonAsc = CurUnoDialog.insertRadioButton("optAscend" + Integer.toString(i + 1), 0, new String[]
@@ -108,8 +109,8 @@ public class SortingComponent
                             PropertyNames.PROPERTY_ENABLED, PropertyNames.PROPERTY_HEIGHT, PropertyNames.PROPERTY_HELPURL, PropertyNames.PROPERTY_LABEL, PropertyNames.PROPERTY_POSITION_X, PropertyNames.PROPERTY_POSITION_Y, PropertyNames.PROPERTY_STATE, PropertyNames.PROPERTY_STEP, PropertyNames.PROPERTY_TABINDEX, "Tag", PropertyNames.PROPERTY_WIDTH
                         }, new Object[]
                         {
-                            bDoEnable, 10, HIDString, sSortAscend[i], IOptButtonPosX, Integer.valueOf(iCurPosY + 10), Short.valueOf((short) 1), IStep, Short.valueOf(curtabindex++), PropertyNames.ASC, IOptButtonWidth
-                        }); //, Short.valueOf((short) (18+i*4))
+                            bDoEnable, 10, HIDString, sSortAscend[i], IOptButtonPosX, new Integer(iCurPosY + 10), new Short((short) 1), IStep, new Short(curtabindex++), PropertyNames.ASC, IOptButtonWidth
+                        }); //, new Short((short) (18+i*4))
 
                 HIDString = HelpIds.getHelpIdString(FirstHelpIndex + 2);
                 XRadioButton xRadioButtonDesc = CurUnoDialog.insertRadioButton("optDescend" + Integer.toString(i + 1), 0, new String[]
@@ -117,8 +118,8 @@ public class SortingComponent
                             PropertyNames.PROPERTY_ENABLED, PropertyNames.PROPERTY_HEIGHT, PropertyNames.PROPERTY_HELPURL, PropertyNames.PROPERTY_LABEL, PropertyNames.PROPERTY_POSITION_X, PropertyNames.PROPERTY_POSITION_Y, PropertyNames.PROPERTY_STATE, PropertyNames.PROPERTY_STEP, PropertyNames.PROPERTY_TABINDEX, "Tag", PropertyNames.PROPERTY_WIDTH
                         }, new Object[]
                         {
-                            bDoEnable, 10, HIDString, sSortDescend[i], IOptButtonPosX, Integer.valueOf(iCurPosY + 24), Short.valueOf((short) 0), IStep, Short.valueOf(curtabindex++), "DESC", IOptButtonWidth
-                        }); //, Short.valueOf((short) (19+i*4))
+                            bDoEnable, 10, HIDString, sSortDescend[i], IOptButtonPosX, new Integer(iCurPosY + 24), new Short((short) 0), IStep, new Short(curtabindex++), "DESC", IOptButtonWidth
+                        }); //, new Short((short) (19+i*4))
                 iCurPosY = iCurPosY + 36;
                 FirstHelpIndex += 3;
             }
@@ -192,8 +193,9 @@ public class SortingComponent
     /**
      * sets the controls of a Sorting criterion to readonly or not.
      * @param _index index of the Sorting criterion
+     * @param _breadonly
      */
-    private void setReadOnly(int _index, boolean _breadonly)
+    public void setReadOnly(int _index, boolean _breadonly)
     {
         CurUnoDialog.setControlProperty("lstSort" + Integer.toString(_index + 1), PropertyNames.READ_ONLY, Boolean.valueOf(_breadonly));
     }
@@ -201,6 +203,7 @@ public class SortingComponent
     /**
      *
      * @param _index the first Sorting criterion in which 'ReadOnly is set to 'false'
+     * @param _bcomplete
      */
     public void setReadOnlyUntil(int _index, boolean _bcomplete)
     {
@@ -273,7 +276,26 @@ public class SortingComponent
         }
     }
 
-
+    public void disableListBoxesfromIndex(int CurIndex)
+    {
+        if (CurIndex < MAXSORTCRITERIAINDEX)
+        {
+            for (int i = CurIndex + 1; i <= MAXSORTCRITERIAINDEX; i++)
+            {
+                toggleSortListBox(i, (false));
+                if (i < MaxSortIndex)
+                {
+                    CurUnoDialog.setControlProperty("lstSort" + Integer.toString(i + 2), PropertyNames.SELECTED_ITEMS, new short[]
+                            {
+                                0
+                            });
+                }
+                //          xSortListBox[i+1].selectItemPos((short)0, true);
+            }
+            CurUnoDialog.setFocus("lblSort" + new Integer(CurIndex + 1));
+            MaxSortIndex = CurIndex - 1;
+        }
+    }
 
     //  The following code can be reactivated in a future version when task #100799 will be fixed
     private void moveupSortItems(int CurIndex, boolean bDoEnable)
