@@ -18,6 +18,7 @@
 package com.sun.star.wizards.ui;
 
 import com.sun.star.awt.*;
+import com.sun.star.beans.Property;
 import com.sun.star.beans.XMultiPropertySet;
 
 import com.sun.star.beans.XPropertySet;
@@ -39,7 +40,7 @@ public class UnoDialog implements EventNames
 
     public XMultiServiceFactory xMSF;
     public XMultiServiceFactory MSFDialogModel;
-    private XNameContainer xDlgNames;
+    public XNameContainer xDlgNames;
     public XControlContainer xDlgContainer;
     private XNameAccess m_xDlgNameAccess;
     public XControl xControl;
@@ -48,9 +49,9 @@ public class UnoDialog implements EventNames
     public XWindow xWindow;
     public XComponent xComponent;
     public XInterface xDialogModel;
-    private XInterface xUnoDialog;
-
-    private XVclWindowPeer xVclWindowPeer;
+    public XInterface xUnoDialog;
+    public XPropertySet xPSetDlg;
+    public XVclWindowPeer xVclWindowPeer;
     public HashMap<String, Integer> ControlList;
     public Resource m_oResource;
     public XWindowPeer xWindowPeer = null;
@@ -76,7 +77,7 @@ public class UnoDialog implements EventNames
             xControl = UnoRuntime.queryInterface(XControl.class, xUnoDialog);
             XControlModel xControlModel = UnoRuntime.queryInterface(XControlModel.class, xDialogModel);
             xControl.setModel(xControlModel);
-            UnoRuntime.queryInterface(XPropertySet.class, xDialogModel);
+            xPSetDlg = UnoRuntime.queryInterface(XPropertySet.class, xDialogModel);
             xDlgContainer = UnoRuntime.queryInterface(XControlContainer.class, xUnoDialog);
             xDlgNames = UnoRuntime.queryInterface(XNameContainer.class, xDialogModel);
             xComponent = UnoRuntime.queryInterface(XComponent.class, xUnoDialog);
@@ -108,7 +109,7 @@ public class UnoDialog implements EventNames
         return iKey;
     }
 
-    private void createPeerConfiguration()
+    public void createPeerConfiguration()
     {
         m_oPeerConfig = new PeerConfig(this);
     }
@@ -197,7 +198,24 @@ public class UnoDialog implements EventNames
         }
     }
 
-
+    public void printControlProperties(String ControlName)
+    {
+        try
+        {
+            Object xControlModel = getDlgNameAccess().getByName(ControlName);
+            XPropertySet xPSet = UnoRuntime.queryInterface(XPropertySet.class, xControlModel);
+            Property[] allProps = xPSet.getPropertySetInfo().getProperties();
+            for (int i = 0; i < allProps.length; i++)
+            {
+                String sName = allProps[i].Name;
+                System.out.println(sName);
+            }
+        }
+        catch (com.sun.star.uno.Exception exception)
+        { // com.sun.star.container.NoSuchElementException, com.sun.star.beans.UnknownPropertyException,
+            exception.printStackTrace(System.err); // com.sun.star.lang.WrappedTargetException, com.sun.star.beans.PropertyVetoException
+        }
+    }
 
     public double getMAPConversionFactor(String ControlName)
     {
@@ -251,7 +269,14 @@ public class UnoDialog implements EventNames
         return ipos.length > 0;
     }
 
-
+    public void addSingleItemtoListbox(XListBox xListBox, String ListItem, short iSelIndex)
+    {
+        xListBox.addItem(ListItem, xListBox.getItemCount());
+        if (iSelIndex != -1)
+        {
+            xListBox.selectItemPos(iSelIndex, true);
+        }
+    }
 
     public XFixedText insertLabel(String sName, String[] sPropNames, Object[] oPropValues)
     {
@@ -281,7 +306,7 @@ public class UnoDialog implements EventNames
         {
             xButton.addActionListener(xActionListener);
         }
-        Integer ControlKey = Integer.valueOf(iControlKey);
+        Integer ControlKey = new Integer(iControlKey);
         if (ControlList != null)
         {
             ControlList.put(sName, ControlKey);
@@ -289,9 +314,41 @@ public class UnoDialog implements EventNames
         return xButton;
     }
 
+    public void insertCheckBox(String sName, int iControlKey, XItemListener xItemListener, String[] sProperties, Object[] sValues) throws com.sun.star.uno.Exception
+    {
+        Object oButtonModel = insertControlModel("com.sun.star.awt.UnoControlCheckBoxModel", sName, sProperties, sValues);
+        XPropertySet xPSet = UnoRuntime.queryInterface(XPropertySet.class, oButtonModel);
+        xPSet.setPropertyValue(PropertyNames.PROPERTY_NAME, sName);
+        Object objectCheckBox = xDlgContainer.getControl(sName);
+        XCheckBox xCheckBox = UnoRuntime.queryInterface(XCheckBox.class, objectCheckBox);
+        if (xItemListener != null)
+        {
+            xCheckBox.addItemListener(xItemListener);
+        }
+        Integer ControlKey = new Integer(iControlKey);
+        if (ControlList != null)
+        {
+            ControlList.put(sName, ControlKey);
+        }
+    }
 
-
-
+    public void insertNumericField(String sName, int iControlKey, XTextListener xTextListener, String[] sProperties, Object[] sValues) throws com.sun.star.uno.Exception
+    {
+        Object oNumericFieldModel = insertControlModel("com.sun.star.awt.UnoControlNumericFieldModel", sName, sProperties, sValues);
+        XPropertySet xPSet = UnoRuntime.queryInterface(XPropertySet.class, oNumericFieldModel);
+        xPSet.setPropertyValue(PropertyNames.PROPERTY_NAME, sName);
+        Object objectNumericField = xDlgContainer.getControl(sName);
+        XTextComponent xNumericField = UnoRuntime.queryInterface(XTextComponent.class, objectNumericField);
+        if (xTextListener != null)
+        {
+            xNumericField.addTextListener(xTextListener);
+        }
+        Integer ControlKey = new Integer(iControlKey);
+        if (ControlList != null)
+        {
+            ControlList.put(sName, ControlKey);
+        }
+    }
 
     public XScrollBar insertScrollBar(String sName, int iControlKey, XAdjustmentListener xAdjustmentListener, String[] sProperties, Object[] sValues)
     {
@@ -306,7 +363,7 @@ public class UnoDialog implements EventNames
             {
                 xScrollBar.addAdjustmentListener(xAdjustmentListener);
             }
-            Integer ControlKey = Integer.valueOf(iControlKey);
+            Integer ControlKey = new Integer(iControlKey);
             if (ControlList != null)
             {
                 ControlList.put(sName, ControlKey);
@@ -330,7 +387,7 @@ public class UnoDialog implements EventNames
         return insertEditField("com.sun.star.awt.UnoControlFormattedFieldModel", sName, iControlKey, xTextListener, sProperties, sValues);
     }
 
-    private XTextComponent insertEditField(String ServiceName, String sName, int iControlKey, XTextListener xTextListener, String[] sProperties, Object[] sValues)
+    public XTextComponent insertEditField(String ServiceName, String sName, int iControlKey, XTextListener xTextListener, String[] sProperties, Object[] sValues)
     {
         try
         {
@@ -343,7 +400,7 @@ public class UnoDialog implements EventNames
             {
                 xTextBox.addTextListener(xTextListener);
             }
-            Integer ControlKey = Integer.valueOf(iControlKey);
+            Integer ControlKey = new Integer(iControlKey);
             ControlList.put(sName, ControlKey);
             return xTextBox;
         }
@@ -369,12 +426,35 @@ public class UnoDialog implements EventNames
         {
             xListBox.addActionListener(xActionListener);
         }
-        Integer ControlKey = Integer.valueOf(iControlKey);
+        Integer ControlKey = new Integer(iControlKey);
         ControlList.put(sName, ControlKey);
         return xListBox;
     }
 
-
+    public XComboBox insertComboBox(String sName, int iControlKey, XActionListener xActionListener, XTextListener xTextListener, XItemListener xItemListener, String[] sProperties, Object[] sValues) throws com.sun.star.uno.Exception
+    {
+        XInterface xComboBoxModel = insertControlModel("com.sun.star.awt.UnoControlComboBoxModel", sName, sProperties, sValues);
+        XPropertySet xPSet = UnoRuntime.queryInterface(XPropertySet.class, xComboBoxModel);
+        xPSet.setPropertyValue(PropertyNames.PROPERTY_NAME, sName);
+        XControl xControlComboBox = xDlgContainer.getControl(sName);
+        XComboBox xComboBox = UnoRuntime.queryInterface(XComboBox.class, xControlComboBox);
+        if (xItemListener != null)
+        {
+            xComboBox.addItemListener(xItemListener);
+        }
+        if (xTextListener != null)
+        {
+            XTextComponent xTextComponent = UnoRuntime.queryInterface(XTextComponent.class, xComboBox);
+            xTextComponent.addTextListener(xTextListener);
+        }
+        if (xActionListener != null)
+        {
+            xComboBox.addActionListener(xActionListener);
+        }
+        Integer ControlKey = new Integer(iControlKey);
+        ControlList.put(sName, ControlKey);
+        return xComboBox;
+    }
 
     public XRadioButton insertRadioButton(String sName, int iControlKey, XItemListener xItemListener, String[] sProperties, Object[] sValues)
     {
@@ -400,7 +480,7 @@ public class UnoDialog implements EventNames
     public XRadioButton insertRadioButton(String sName, int iControlKey, String[] sProperties, Object[] sValues)
     {
         XRadioButton xRadioButton = insertRadioButton(sName, sProperties, sValues);
-        Integer ControlKey = Integer.valueOf(iControlKey);
+        Integer ControlKey = new Integer(iControlKey);
         ControlList.put(sName, ControlKey);
         return xRadioButton;
     }
@@ -439,7 +519,7 @@ public class UnoDialog implements EventNames
             int iCurDialogStep = AnyConverter.toInt(Helper.getUnoPropertyValue(this.xDialogModel, PropertyNames.PROPERTY_STEP));
             if (bIsVisible)
             {
-                setControlProperty(controlname, PropertyNames.PROPERTY_STEP, Integer.valueOf(iCurDialogStep));
+                setControlProperty(controlname, PropertyNames.PROPERTY_STEP, new Integer(iCurDialogStep));
             }
             else
             {
@@ -461,7 +541,7 @@ public class UnoDialog implements EventNames
         {
             int ncurstep = AnyConverter.toInt(Helper.getUnoPropertyValue(this.xDialogModel, PropertyNames.PROPERTY_STEP));
             Helper.setUnoPropertyValue(xDialogModel, PropertyNames.PROPERTY_STEP, 99);
-            Helper.setUnoPropertyValue(xDialogModel, PropertyNames.PROPERTY_STEP, Integer.valueOf(ncurstep));
+            Helper.setUnoPropertyValue(xDialogModel, PropertyNames.PROPERTY_STEP, new Integer(ncurstep));
         }
         catch (com.sun.star.lang.IllegalArgumentException exception)
         {
@@ -492,7 +572,25 @@ public class UnoDialog implements EventNames
         xWindow.setFocus();
     }
 
-
+    public static String[] combineListboxList(String sFirstEntry, String[] MainList)
+    {
+        try
+        {
+            String[] FirstList = new String[]
+            {
+                sFirstEntry
+            };
+            String[] ResultList = new String[MainList.length + 1];
+            System.arraycopy(FirstList, 0, ResultList, 0, 1);
+            System.arraycopy(MainList, 0, ResultList, 1, MainList.length);
+            return ResultList;
+        }
+        catch (java.lang.Exception jexception)
+        {
+            jexception.printStackTrace(System.err);
+            return null;
+        }
+    }
 
     public void selectListBoxItem(XListBox xListBox, short iFieldsSelIndex)
     {
@@ -514,6 +612,7 @@ public class UnoDialog implements EventNames
     }
 
     /** deselects a Listbox. MultipleMode is not supported
+     * @param _xBasisListBox
      */
     public static void deselectListBox(XInterface _xBasisListBox)
     {
@@ -541,7 +640,9 @@ public class UnoDialog implements EventNames
 
     /**
      *
+     * @param FramePosSize
      * @return 0 for cancel, 1 for ok
+     * @throws com.sun.star.uno.Exception
      */
     public short executeDialog(Rectangle FramePosSize) throws com.sun.star.uno.Exception
     {
@@ -572,10 +673,21 @@ public class UnoDialog implements EventNames
         this.xWindow.setVisible(true);
     }
 
-
+    /**
+     * @param parent
+     * @return 0 for cancel, 1 for ok.
+     * @throws com.sun.star.uno.Exception
+     */
+    public short executeDialog(UnoDialog parent)
+            throws com.sun.star.uno.Exception
+    {
+        return executeDialog(parent.xWindow.getPosSize());
+    }
 
     /**
+     * @param xComponent
      * @return 0 for cancel, 1 for ok.
+     * @throws com.sun.star.uno.Exception
      */
     public short executeDialog(XInterface xComponent) throws com.sun.star.uno.Exception
     {
@@ -603,7 +715,14 @@ public class UnoDialog implements EventNames
         return executeDialog(Desktop.getActiveFrame(xMSF));
     }
 
-
+    public void setAutoMnemonic(String ControlName, boolean bValue)
+    {
+        Object oControl = xDlgContainer.getControl(ControlName);
+        xControl = UnoRuntime.queryInterface(XControl.class, oControl);
+        XWindowPeer xWindowPeer = xControl.getPeer();
+        XVclWindowPeer xVclWindowPeer = UnoRuntime.queryInterface(XVclWindowPeer.class, xWindowPeer);
+        xVclWindowPeer.setProperty("AutoMnemonics", Boolean.valueOf(bValue));
+    }
 
     public void modifyFontWeight(String ControlName, float FontWeight)
     {
@@ -616,6 +735,9 @@ public class UnoDialog implements EventNames
      * create a peer for this
      * dialog, using the given
      * peer as a parent.
+     * @param parentPeer
+     * @return
+     * @throws com.sun.star.uno.Exception
      */
     public XWindowPeer createWindowPeer(XWindowPeer parentPeer) throws com.sun.star.uno.Exception
     {
@@ -637,15 +759,41 @@ public class UnoDialog implements EventNames
      * Creates a peer for this
      * dialog, using the active OO frame
      * as the parent window.
+     * @return
+     * @throws com.sun.star.uno.Exception
      */
     public XWindowPeer createWindowPeer() throws com.sun.star.uno.Exception
     {
         return createWindowPeer(null);
     }
 
+    // deletes the first entry when this is equal to "DelEntryName"
+    // returns true when a new item is selected
+    public void deletefirstListboxEntry(String ListBoxName, String DelEntryName)
+    {
+        XControl xListControl = xDlgContainer.getControl(ListBoxName);
+        XListBox xListBox = UnoRuntime.queryInterface(XListBox.class, xListControl);
+        String FirstItem = xListBox.getItem((short) 0);
+        if (FirstItem.equals(DelEntryName))
+        {
+            short SelPos = xListBox.getSelectedItemPos();
+            xListBox.removeItems((short) 0, (short) 1);
+            if (SelPos > 0)
+            {
+                setControlProperty(ListBoxName, PropertyNames.SELECTED_ITEMS, new short[SelPos]);
+                xListBox.selectItemPos((short) (SelPos - 1), true);
+            }
+        }
+    }
 
-
-
+    public void setPeerProperty(String ControlName, String PropertyName, Object PropertyValue)
+    {
+        Object oControl = xDlgContainer.getControl(ControlName);
+        XControl xControl = UnoRuntime.queryInterface(XControl.class, oControl);
+        XWindowPeer xControlPeer = xControl.getPeer();
+        XVclWindowPeer xVclWindowPeer = UnoRuntime.queryInterface(XVclWindowPeer.class, xControlPeer);
+        xVclWindowPeer.setProperty(PropertyName, PropertyValue);
+    }
 
     public static Object getModel(Object control)
     {
@@ -658,7 +806,7 @@ public class UnoDialog implements EventNames
         setEnabled(control, enabled ? Boolean.TRUE : Boolean.FALSE);
     }
 
-    private static void setEnabled(Object control, Boolean enabled)
+    public static void setEnabled(Object control, Boolean enabled)
     {
         Helper.setUnoPropertyValue(getModel(control), PropertyNames.PROPERTY_ENABLED, enabled);
     }
@@ -667,7 +815,7 @@ public class UnoDialog implements EventNames
      * @param oControlModel the model of a control
      * @return the LabelType according to UIConsts.CONTROLTYPE
      */
-    private static int getControlModelType(Object oControlModel)
+    public static int getControlModelType(Object oControlModel)
     {
         XServiceInfo xServiceInfo = UnoRuntime.queryInterface(XServiceInfo.class, oControlModel);
         if (xServiceInfo.supportsService("com.sun.star.awt.UnoControlFixedTextModel"))
@@ -749,6 +897,7 @@ public class UnoDialog implements EventNames
     }
 
     /**
+     * @param oControlModel
      * @return the name of the property that contains the value of a controlmodel
      */
     public static String getDisplayProperty(Object oControlModel)
@@ -762,7 +911,7 @@ public class UnoDialog implements EventNames
      * @param itype The type of the control conforming to UIConst.ControlType
      * @return the name of the property that contains the value of a controlmodel
      */
-    private static String getDisplayProperty(int itype)
+    public static String getDisplayProperty(int itype)
     {
         switch (itype)
         {
@@ -852,20 +1001,20 @@ public class UnoDialog implements EventNames
         }
     }
 
-    private static int getRedColorShare(int _nColor)
+    public static int getRedColorShare(int _nColor)
     {
         int nRed = _nColor / 65536;
         return nRed;
     }
 
-    private static int getGreenColorShare(int _nColor)
+    public static int getGreenColorShare(int _nColor)
     {
         int nRedModulo = _nColor % 65536;
         int nGreen = nRedModulo / 256;
         return nGreen;
     }
 
-    private static int getBlueColorShare(int _nColor)
+    public static int getBlueColorShare(int _nColor)
     {
         int nRedModulo = _nColor % 65536;
         int nGreenModulo = (nRedModulo % 256);
