@@ -42,7 +42,7 @@ public class UnoDialog2 extends UnoDialog
      * Override this method to return another listener.
      * @return
      */
-    private AbstractListener createListener()
+    protected AbstractListener createListener()
     {
         return new CommonListener();
     }
@@ -75,7 +75,7 @@ public class UnoDialog2 extends UnoDialog
         return insertButton(sName, actionPerformed, this, sPropNames, oPropValues);
     }
 
-    public XButton insertImageButton(String sName, com.sun.star.awt.XActionListener actionPerformed, String[] sPropNames, Object[] oPropValues)
+    public XButton insertImageButton(String sName, com.sun.star.awt.XActionListener actionPerformed, Object eventTarget, String[] sPropNames, Object[] oPropValues)
     {
 
         XButton xButton = (XButton) insertControlModel2("com.sun.star.awt.UnoControlButtonModel", sName, sPropNames, oPropValues, XButton.class);
@@ -85,6 +85,11 @@ public class UnoDialog2 extends UnoDialog
             xButton.addActionListener(actionPerformed);
         }
         return xButton;
+    }
+
+    public XButton insertImageButton(String sName, com.sun.star.awt.XActionListener actionPerformed, String[] sPropNames, Object[] oPropValues)
+    {
+        return insertImageButton(sName, actionPerformed, this, sPropNames, oPropValues);
     }
 
     public XCheckBox insertCheckBox(String sName, String itemChanged, Object eventTarget, String[] sPropNames, Object[] oPropValues)
@@ -103,6 +108,33 @@ public class UnoDialog2 extends UnoDialog
     public XCheckBox insertCheckBox(String sName, String itemChanged, String[] sPropNames, Object[] oPropValues)
     {
         return insertCheckBox(sName, itemChanged, this, sPropNames, oPropValues);
+    }
+
+    public XComboBox insertComboBox(String sName, String actionPerformed, String itemChanged, String textChanged, Object eventTarget, String[] sPropNames, Object[] oPropValues)
+    {
+        XComboBox xComboBox = (XComboBox) insertControlModel2("com.sun.star.awt.UnoControlComboBoxModel", sName, sPropNames, oPropValues, XComboBox.class);
+        if (actionPerformed != null)
+        {
+            xComboBox.addActionListener((XActionListener) guiEventListener);
+            guiEventListener.add(sName, EVENT_ACTION_PERFORMED, actionPerformed, eventTarget);
+        }
+        if (itemChanged != null)
+        {
+            xComboBox.addItemListener((XItemListener) guiEventListener);
+            guiEventListener.add(sName, EVENT_ITEM_CHANGED, itemChanged, eventTarget);
+        }
+        if (textChanged != null)
+        {
+            XTextComponent xTextComponent = UnoRuntime.queryInterface(XTextComponent.class, xComboBox);
+            xTextComponent.addTextListener((XTextListener) guiEventListener);
+            guiEventListener.add(sName, EVENT_TEXT_CHANGED, textChanged, eventTarget);
+        }
+        return xComboBox;
+    }
+
+    public XComboBox insertComboBox(String sName, String actionPerformed, String itemChanged, String textChanged, String[] sPropNames, Object[] oPropValues)
+    {
+        return insertComboBox(sName, actionPerformed, textChanged, itemChanged, this, sPropNames, oPropValues);
     }
 
     public XListBox insertListBox(String sName, String actionPerformed, String itemChanged, Object eventTarget, String[] sPropNames, Object[] oPropValues)
@@ -142,14 +174,21 @@ public class UnoDialog2 extends UnoDialog
         return insertRadioButton(sName, itemChanged, this, sPropNames, oPropValues);
     }
 
-
+    public XControl insertTitledBox(String sName, String[] sPropNames, Object[] oPropValues)
+    {
+        Object oTitledBox = insertControlModel2("com.sun.star.awt.UnoControlGroupBoxModel", sName, sPropNames, oPropValues);
+        return UnoRuntime.queryInterface(XControl.class, oTitledBox);
+    }
 
     public XTextComponent insertTextField(String sName, String sTextChanged, Object eventTarget, String[] sPropNames, Object[] oPropValues)
     {
         return (XTextComponent) insertEditField(sName, sTextChanged, eventTarget, "com.sun.star.awt.UnoControlEditModel", sPropNames, oPropValues, XTextComponent.class);
     }
 
-
+    public XTextComponent insertTextField(String sName, String sTextChanged, String[] sPropNames, Object[] oPropValues)
+    {
+        return insertTextField(sName, sTextChanged, this, sPropNames, oPropValues);
+    }
 
     public XControl insertImage(String sName, String[] sPropNames, Object[] oPropValues)
     {
@@ -165,7 +204,7 @@ public class UnoDialog2 extends UnoDialog
                 },
                 new Object[]
                 {
-                    Short.valueOf((short) 0), 10, UIConsts.INFOIMAGEURL, Integer.valueOf(_posx), Integer.valueOf(_posy), Boolean.FALSE, Integer.valueOf(_iStep), 10
+                    new Short((short) 0), 10, UIConsts.INFOIMAGEURL, new Integer(_posx), new Integer(_posy), Boolean.FALSE, new Integer(_iStep), 10
                 });
         super.getPeerConfiguration().setImageUrl(getModel(xImgControl), UIConsts.INFOIMAGEURL, UIConsts.INFOIMAGEURL_HC);
         return xImgControl;
@@ -186,19 +225,101 @@ public class UnoDialog2 extends UnoDialog
         return UnoRuntime.queryInterface(type, xField);
     }
 
+    public XControl insertFileControl(String sName, String sTextChanged, Object eventTarget, String[] sPropNames, Object[] oPropValues)
+    {
+        return (XControl) insertEditField(sName, sTextChanged, eventTarget, "com.sun.star.awt.UnoControlFileControlModel", sPropNames, oPropValues, XControl.class);
+    }
+
+    public XControl insertFileControl(String sName, String sTextChanged, String[] sPropNames, Object[] oPropValues)
+    {
+        return insertFileControl(sName, sTextChanged, this, sPropNames, oPropValues);
+    }
+
+    public XCurrencyField insertCurrencyField(String sName, String sTextChanged, Object eventTarget, String[] sPropNames, Object[] oPropValues)
+    {
+        return (XCurrencyField) insertEditField(sName, sTextChanged, eventTarget, "com.sun.star.awt.UnoControlCurrencyFieldModel", sPropNames, oPropValues, XCurrencyField.class);
+    }
+
+    public XCurrencyField insertCurrencyField(String sName, String sTextChanged, String[] sPropNames, Object[] oPropValues)
+    {
+        return insertCurrencyField(sName, sTextChanged, this, sPropNames, oPropValues);
+    }
+
+    public XDateField insertDateField(String sName, String sTextChanged, Object eventTarget, String[] sPropNames, Object[] oPropValues)
+    {
+        return (XDateField) insertEditField(sName, sTextChanged, eventTarget, "com.sun.star.awt.UnoControlDateFieldModel", sPropNames, oPropValues, XDateField.class);
+    }
+
+    public XDateField insertDateField(String sName, String sTextChanged, String[] sPropNames, Object[] oPropValues)
+    {
+        return insertDateField(sName, sTextChanged, this, sPropNames, oPropValues);
+    }
+
+    public XNumericField insertNumericField(String sName, String sTextChanged, Object eventTarget, String[] sPropNames, Object[] oPropValues)
+    {
+        return (XNumericField) insertEditField(sName, sTextChanged, eventTarget, "com.sun.star.awt.UnoControlNumericFieldModel", sPropNames, oPropValues, XNumericField.class);
+    }
+
+    public XNumericField insertNumericField(String sName, String sTextChanged, String[] sPropNames, Object[] oPropValues)
+    {
+        return insertNumericField(sName, sTextChanged, this, sPropNames, oPropValues);
+    }
+
+    public XTimeField insertTimeField(String sName, String sTextChanged, Object eventTarget, String[] sPropNames, Object[] oPropValues)
+    {
+        return (XTimeField) insertEditField(sName, sTextChanged, eventTarget, "com.sun.star.awt.UnoControlTimeFieldModel", sPropNames, oPropValues, XTimeField.class);
+    }
+
+    public XTimeField insertTimeField(String sName, String sTextChanged, String[] sPropNames, Object[] oPropValues)
+    {
+        return insertTimeField(sName, sTextChanged, this, sPropNames, oPropValues);
+    }
+
+    public XPatternField insertPatternField(String sName, String sTextChanged, Object eventTarget, String[] sPropNames, Object[] oPropValues)
+    {
+        return (XPatternField) insertEditField(sName, sTextChanged, eventTarget, "com.sun.star.awt.UnoControlPatternFieldModel", sPropNames, oPropValues, XPatternField.class);
+    }
+
+    public XPatternField insertPatternField(String sName, String sTextChanged, String[] sPropNames, Object[] oPropValues)
+    {
+        return insertPatternField(sName, sTextChanged, this, sPropNames, oPropValues);
+    }
+
+    public XTextComponent insertFormattedField(String sName, String sTextChanged, Object eventTarget, String[] sPropNames, Object[] oPropValues)
+    {
+        return (XTextComponent) insertEditField(sName, sTextChanged, eventTarget, "com.sun.star.awt.UnoControlFormattedFieldModel", sPropNames, oPropValues, XTextComponent.class);
+    }
+
+    public XTextComponent insertFormattedField(String sName, String sTextChanged, String[] sPropNames, Object[] oPropValues)
+    {
+        return insertFormattedField(sName, sTextChanged, this, sPropNames, oPropValues);
+    }
+
     public XControl insertFixedLine(String sName, String[] sPropNames, Object[] oPropValues)
     {
         Object oLine = insertControlModel2("com.sun.star.awt.UnoControlFixedLineModel", sName, sPropNames, oPropValues);
         return UnoRuntime.queryInterface(XControl.class, oLine);
     }
 
+    public XScrollBar insertScrollBar(String sName, String[] sPropNames, Object[] oPropValues)
+    {
+        Object oScrollBar = insertControlModel2("com.sun.star.awt.UnoControlScrollBarModel", sName, sPropNames, oPropValues);
+        return UnoRuntime.queryInterface(XScrollBar.class, oScrollBar);
+    }
 
+    public XProgressBar insertProgressBar(String sName, String[] sPropNames, Object[] oPropValues)
+    {
+        Object oProgressBar = insertControlModel2("com.sun.star.awt.UnoControlProgressBarModel", sName, sPropNames, oPropValues);
+        return UnoRuntime.queryInterface(XProgressBar.class, oProgressBar);
+    }
 
+    public XControl insertGroupBox(String sName, String[] sPropNames, Object[] oPropValues)
+    {
+        Object oGroupBox = insertControlModel2("com.sun.star.awt.UnoControlGroupBoxModel", sName, sPropNames, oPropValues);
+        return UnoRuntime.queryInterface(XControl.class, oGroupBox);
+    }
 
-
-
-
-    private Object insertControlModel2(String serviceName, String componentName, String[] sPropNames, Object[] oPropValues)
+    public Object insertControlModel2(String serviceName, String componentName, String[] sPropNames, Object[] oPropValues)
     {
         try
         {
@@ -217,12 +338,20 @@ public class UnoDialog2 extends UnoDialog
         return xDlgContainer.getControl(componentName);
     }
 
-    private Object insertControlModel2(String serviceName, String componentName, String[] sPropNames, Object[] oPropValues, Class<? extends XInterface> type)
+    public Object insertControlModel2(String serviceName, String componentName, String[] sPropNames, Object[] oPropValues, Class<? extends XInterface> type)
     {
         return UnoRuntime.queryInterface(type, insertControlModel2(serviceName, componentName, sPropNames, oPropValues));
     }
 
+    public String translateURL(String relativeURL)
+    {
+        return PropertyNames.EMPTY_STRING;
+    }
 
+    public static Object getControlModel(Object unoControl)
+    {
+        return UnoRuntime.queryInterface(XControl.class, unoControl).getModel();
+    }
 
     public int showMessageBox(String windowServiceName, int windowAttribute, String MessageText)
     {
